Fixed footer out of bounds bug:

--- a/src/scss/modules/_home.scss
+++ b/src/scss/modules/_home.scss
@@ -320,3 +320,13 @@
     }
   }
 }
+
+@media (max-width: 450px) {
+  .main-footer {
+    .footer-links {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      row-gap: 1rem;
+    }
+  }
+}
